--- a/src/styles/base/_settings.scss
+++ b/src/styles/base/_settings.scss
@@ -1,4 +1,14 @@
 // Colors
+$grey: #666;
+$dark-grey: #333333;
+$light-grey: #f7f7f7;
+$blue: #1c88bf;
+$dark-blue: #364051;
+
+// Font Sizes
+$font-size-large: 1.8rem;
+$font-size-small: 1.4rem;
+
 
 // Spacing
 $m-size: 1.6rem;
